--- a/react/... trip/src/App.css
+++ b/react/... trip/src/App.css
@@ -1,5 +1,23 @@
-.box{
-  width:750px;
-  height: 200px;
-  background-color:green;
+/* 通用样式 */
+.flex{
+  display: flex;
+}
+.flex-col{
+  flex-direction: column;
+}
+.flex-1{
+  flex:1;
+}
+.h-screen{
+  height:100vh;
+}
+.h-all{
+  height: 100%;
+}
+.fixed-loading{
+  position: fixed;
+  top:50px;
+  left:50%;
+  transform: translate(-50%);
+  z-index: 9999;
 }
