--- a/react/... trip/src/App.css
+++ b/react/... trip/src/App.css
@@ -21,3 +21,12 @@
   transform: translate(-50%);
   z-index: 9999;
 }
+.mt2{
+  margin-top: 8px;
+}
+.mt3{
+  margin-top: 12px;
+}
+.ml4{
+  margin-top: 16px;
+}
