--- a/react/... trip/src/pages/Account/account.module.css
+++ b/react/... trip/src/pages/Account/account.module.css
@@ -22,3 +22,33 @@
     color:#ccc;
     margin-top:8px;
 }
+/* 九宫格 grid 行列同时布局 */
+/* 账户页面网格容器样式 */
+.gridContainer{
+    display: grid; /* 启用CSS Grid布局 */
+    grid-template-columns: repeat(3, 1fr); /* 创建3列等宽网格，每列宽度为1fr（等分剩余空间） */
+    grid-gap: 16px; /* 网格项之间的间距为16px */
+    padding: 40px; /* 容器内边距为16px */
+    margin:16px 32px;
+    background-color: #fff;
+}
+.gridItem{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;  
+    padding: 24px;
+    border:1px solid #ccc;
+    border-radius: 16px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    /* background-color: #f5f5f5; */
+    cursor: pointer;
+}
+.gridItem .icon {
+    font-size: 48px;
+    margin-bottom: 16px;
+}
+.gridItem .text {
+    font-size: 28px;
+    color: #333;
+}
